--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
