--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
+    "styled-components": "^4.4.1",
     "unsplash-js": "^6.0.0"
   },
   "devDependencies": {
