--- a/ios/Podfile
+++ b/ios/Podfile
@@ -36,6 +36,8 @@ target 'Loki' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'RNSearchBar', :path => '../node_modules/react-native-search-bar'
+
   target 'LokiTests' do
     inherit! :search_paths
     # Pods for testing
