--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.9.0",
     "react-native": "0.61.4",
     "react-native-gesture-handler": "^1.5.0",
+    "react-native-image-gallery": "^2.1.5",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^2.0.0-alpha.8",
     "react-native-search-bar": "^3.5.1",
